--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body{
 
 .card{
 	background-color: var(--veryDarkBlue-card);
-	width: 300px;
+	width: 330px;
 	border-radius: 15px;
 }
 
@@ -65,6 +65,10 @@ body{
 
 .container:hover .overlay-img{
 	display: block;
+}
+
+.card-title{
+	font-size: 20px;
 }
 
 .card-text{
