--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 
 :root{
 	--softBlue: hsl(215, 51%, 70%);
@@ -69,6 +69,7 @@ body{
 
 .card-title{
 	font-size: 20px;
+	font-weight: 400;
 }
 
 .card-text{
